--- a/index.html
+++ b/index.html
@@ -1,77 +1,77 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-  	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Filter Demo</title>
-    <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-  	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
-  	<script src="assets/js/jquery-3.4.1.min.js"></script>
-  	<script src="assets/js/main.js"></script>
-  </head>
-  <body>
-    <!-- start here -->
-
-<div class="nav">
-  <div class="nav-item">PVC</div>
-  <div class="nav-item">🤣?</div>
-  <div class="nav-item">Images</div>
-  <div class="nav-item">List</div>
-  <div class="nav-item">Filter</div>
-</div>
-
+<head>
+  <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Boilerplate Starter kit v1.07</title>
+  <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
+	<script src="assets/js/jquery-3.4.1.min.js"></script>
+	<script src="assets/js/main.js"></script>
+</head>
+<body>
+  <!-- start here -->
 <div class="title">
-  PVC WON'T LAST
+Aug19.html
 </div>
 
-<div class="research">
-<!--   start of research div -->
-
-<div class="research-item">
-  <img src="assets/images/file1.jpg">
-  PVC Advertisment
+<div class="subtitle">
+material_artefacts
 </div>
 
-<div class="research-item">
-  <img src="assets/images/file7.jpg">
-  Super Bowl
+<div class="row">
+<div class="column">
+  <img src="assets/images/allarewelcome.jpg" style="width:100%; transform: rotate(2deg);"> 
+  <div class="captions">Keep passing it, still havent been.</div>
+</div>
+<div class="column">
+  <img src="assets/images/bookpage.jpg" style="width:100%; transform: rotate(-1deg);"> Ideas for tech changes.
+</div>
+<div class="column">
+  <img src="assets/images/burger.jpg" style="width:100%; transform: rotate(2deg);">
+    <div class="caption">It's Rob's birthday on the 12th.
+</div>
 </div>
 
-<div class="research-item">
-  <img src="assets/images/file38.jpg">
-  Templates
+<div class="row2">
+<div class="column2">
+  <img src="assets/images/kindness.jpg" style="width:100%; transform: rotate(-3deg);"> 
+    <div class="captions">I feel like this is the last thing I see at night and the first thing I see in the morning right now.</div>
+</div>
+<div class="column2">
+  <img src="assets/images/coaster.jpg" style="width:100%; transform: rotate(4deg);"> 
+   <div class="captions">Someone near the station gave me an old coaster collection. I'm always drawn to graphics from a simpler time - it makes me feel like a kid again.</div>
+</div>
+<div class="column2">
+  <img src="assets/images/handdiagram.jpg" style="width:100%; transform: rotate(-3deg);">
+    <div class="captions">Career workshop. I just liked how visual this was.</div>
+</div>
 </div>
 
-<div class="research-item">
-  <img src="assets/images/file48.jpg">
-  Pointy building
+<div class="row3">
+<div class="column3">
+  <img src="assets/images/falling.jpg" style="width:100%; transform: rotate(2deg);"> 
+   <div class="captions">A metaphor for the year? :P</div>
+</div>
+<div class="column3">
+  <img src="assets/images/commongalaxia.jpg" style="width:100%; transform: rotate(-4deg);"> 
+   <div class="captions">Killing time on Wednesday.</div>
+</div>
+<div class="column3">
+  <img src="assets/images/gorman.jpg" style="width:100%; transform: rotate(3deg);">
+    <div class="captions">I lost another umbrella. Bought this.</div>
+</div>
 </div>
 
-<div class="research-item">
-  <img src="assets/images/file32.jpg">
-  PVC Pipes
+<div class="row4">
+<div class="column4">
+  <img src="assets/digital refs/dylan.png" style="width:100%; transform: rotate(2deg);"> 
+   <div class="captions">Made me laugh</div>
+</div>
 </div>
 
-<div class="research-item">
-  <img src="assets/images/file27.jpg">
-  PVC Cocaine
-</div>
-
-<div class="research-item">
-  <img src="assets/images/file25.jpg">
-  Spongy
-</div>
-
-<div class="research-item">
-  <img src="assets/images/file29.jpg">
-  PVC Slinky
-</div>
-<!-- end of research div -->
-</div>
-
-
-
-    <!-- DO NOT REMOVE BELOW -->
-    <!-- end here -->
-  </body>
+  <!-- DO NOT REMOVE BELOW -->
+  <!-- end here -->
+</body>
 </html>
+
